Bodge in support for the old style registrar
This adds a controller that reconciles Pods to SpiffeIds
The SpiffeIds are then reconciled by the spiffeid controller.

--- a/deploy/crds/spiffeid.spiffe.io_clusterspiffeids_crd.yaml
+++ b/deploy/crds/spiffeid.spiffe.io_clusterspiffeids_crd.yaml
@@ -40,8 +40,11 @@ spec:
                   description: Pod label names/values to match for this spiffe ID
                     To match, pods must be in the same namespace as this ID resource.
                   type: object
+                podName:
+                  type: string
               required:
               - podLabel
+              - podName
               type: object
             spiffeId:
               description: The Spiffe ID to create
